--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "proyecto-personal_marzo",
   "version": "1.0.0",
-  "type": "module",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.0-alpha1",
     "express": "^4.18.2",
     "hbs": "^4.2.0",
